# spreadsheets-synth

./: .gitignore  CMakeLists.txt  INSTALL_313.md  LICENSE.313  README.md  SpreadsheetsSynth.jucer  auto_record_demo.sh  create_demo_gif.sh  push_to_github.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Effects/: EffectsProcessor.cpp  EffectsProcessor.h
Source/GUI/: AcidTabButton.cpp  AcidTabButton.h  CRTShaderOverlay.cpp  CRTShaderOverlay.h  SpreadsheetsDisplay.cpp  SpreadsheetsDisplay.h  XYPad.cpp  XYPad.h
Source/Sequencer/: StepSequencer.cpp  StepSequencer.h
Source/Synth/: TB303Synth.cpp  TB303Synth.h  TB303Voice.cpp  TB303Voice.h
